# crusade-roguelite

./: .gitignore  AGENTS.md  Cargo.toml  SYSTEM_SCOPE_MAP.md  TASKS.md  build.rs  requirements.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/data/: difficulties.json  drops.json  enemies.json  enemy_tier_pools.json  factions.json  formations.json  heroes.json  items.json  map.json  rescue.json  roster_tuning.json  units.json  upgrades.json  waves.json
docs/: ASSET_SOURCES.md  EXPANSION_QA_MATRIX.md  FACTION_ONBOARDING_CHECKLIST.md  README.md  REVAMP_QA_MATRIX.md  REVAMP_RELEASE_CHECKLIST.md  SYSTEMS_REFERENCE.md  SYSTEM_SCOPE_MAP.md  TASKS.md  UNIT_UPDATE_DRAFT.md  requirements.md
installer/: crusade_roguelite.iss  version.json
scripts/: build_windows.ps1  check.ps1  generate_32x32_assets.py  package_windows_installer.ps1
src/: ai.rs  archive.rs  banner.rs  collision.rs  combat.rs  core.rs  data.rs  drops.rs  enemies.rs  formation.rs  inventory.rs  lib.rs  main.rs  map.rs  model.rs  morale.rs  performance.rs  projectiles.rs  random.rs  rescue.rs  settings.rs  squad.rs  steam.rs  ui.rs  upgrades.rs  visuals.rs
