[package]
name = "crusade_roguelite"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
bevy = { version = "0.14.2", features = ["bevy_winit", "png", "x11", "wayland"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing-appender = "0.2.3"
winit = "0.30.13"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
tempfile = "3.23.0"

[features]
default = []
steam = []

[lib]
name = "crusade_roguelite"
path = "src/lib.rs"
